refactor: backport of https://github.com/steve-community/steve/pull/1822